Version 0.4.4
------------------------------------------------------------------------------

BUG FIXES

* Perspective plots from `persp()` are captured now (thanks to Harvey Lime
  and Yihui Xie)

* If an error occurs during printing a visible value, evaluate will halt on
  a cryptic error "operator is invalid for atomic vectors" (fixed by Yihui Xie)

Version 0.4.3
------------------------------------------------------------------------------

NEW FEATURES

* Added `output_handler` argument to `evaluate`. Should be a
  `output_handler` object, which is a list of functions for handling
  each type of result, prior to printing of visible return
  values. This allows clients to override the console-like printing of
  values, while still processing them in the correct temporal
  context. The other handlers are necessary to convey the correct
  ordering of the output. This essentially provides stream-based
  processing, as an alternative to the existing deferred processing.

* New option, `stop_on_error` which controls behaviour when errors
  occur.  The default value, `0`, acts like you've copied and pasted
  the code into the console, and continues to execute all code. `1`
  will stop the code execution and return the results of evaluation up
  to that point, and `2` will raise an error.

BUG FIXES

* Compound expressions like `x <- 10; x` are now evaluated completely.

* Chinese characters on windows now work correctly (thanks to Yihui Xie)

* Graphics and output interleaved correctly when generated from a loop or 
  other compound statements

* By default, `evaluate` will now open a new graphics device and clean it up 
  afterwards.  To suppress that behaviour use `new_device = FALSE`

* use `show` to display S4 objects.

Version 0.4.2
------------------------------------------------------------------------------

* replace deprecated `.Internal(eval.with.vis)` with correct `withVisible`

* `evaluate` gains `debug` argument

Version 0.4.1